Mon Apr 16 00:14:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/testsuite.py: Enhance and refactor the testsuite - it now
	  supports the same environment variables that the C++ testsuite
	  does, uses a little colour to highlight successes and failures,
	  and has different levels of verbosity.  In line with the C++
	  testsuite, it is not verbose by default, but it does display a
	  message describing how to turn the verbosity up.
	* python/docs/bindings.html: Document the test suite a little, fix
	  a typo, and mention the work in progress on the iterators.  (Will
	  need more detailed revision once the work is completed.)

Sun Apr 15 23:31:41 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/doxy2swig.py.in: For methods, if there is a
	  briefdescription node, output it first so that the short summary
	  describes the purpose of the method, rather than being the C++
	  signature.

Sun Apr 15 18:09:14 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py,python/testsuite.py: Enhance testsuite to
	  allow multiple test functions, and to format output similarly to
	  C++ testsuite (including ANSI colour on output devices which
	  support it).  Colours can be disabled explicitly using
	  XAPIAN_TESTSUITE_OUTPUT=plain, and verbose output can be turned
	  on by setting VERBOSE=1.

Sun Apr 15 00:21:30 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/extra.i: Change to using new-style classes for pure python
	  code, since we're depending on python >= 2.2 now.

Sun Apr 15 00:13:28 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/smoketest.py,python/testsuite.py: Refactor code for
	  running the python tests into a separate file, so it can be used
	  for a separate set of python-specific tests.

Fri Apr 13 16:30:56 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* python/doxy2swig.py.in: Add script to generate doccomments.i file